# pikabull

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  index.html  package-lock.json  package.json  requirements.txt  start.sh
agents/: __init__.py  base_agent.py  workflow.py
providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
skills/: __init__.py  akshare_tools.py  chart_tools.py  price_fetcher.py  price_store.py
src/: App.vue  BacktestView.vue  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config_store.rs  lib.rs  main.rs  store.rs
src-tauri/src/agents/: base.rs  mod.rs  strategy_translator.rs  workflow.rs
src-tauri/src/backtest/: engine.rs  metrics.rs  mod.rs  presets.rs  store.rs  strategy.rs
src-tauri/src/providers/: anthropic.rs  mod.rs  openai.rs
src-tauri/src/skills/: chart.rs  indicators.rs  mod.rs  stock_data.rs
templates/: index.html
